# RSS2Mutt

./: Cargo.toml  README.md  rss.txt
src/: main.rs
