[package]
name = "rss_parser"
version = "0.1.0"
authors = ["Francesco <francesco@piva.online>"]

[dependencies]
rss = { version = "1.6.0", features = ["from_url"] }
chrono = "0.4"
reqwest = "0.9.3"
clap = "~2.20.5"
html5ever = "~0.13.0"
html5ever-atoms = "~0.2.0"
tendril = "~0.2.3"
html2runes = "^1.0"


[[bin]]
path = "src/main.rs"
name = "rss_parser"
